--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
-    "devDependencies": {
-        "gulp": "^3.8.8",
-        "laravel-elixir": "*"
-    }
+  "devDependencies": {
+    "gulp": "^3.8.8",
+    "gulp-livereload": "^2.1.1",
+    "laravel-elixir": "*"
+  }
 }
